# arduino_nano_imu_plotter

./: Cargo.toml  README.md
arduino/: readme.md
arduino/src/: main.cpp
src/: constants.rs  data.rs  imu.rs  main.rs
